# visar

./: CMakeLists.txt  Makefile
cmake_include/: utils.cmake
examples/: test.cpp
examples/test/: test.cpp
include/visar/: api.hpp  lib.hpp
src/: lib.cpp
